cabal-version: 3.8

name: based
version: 0.1

common configuration
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    MonoLocalBinds
    LambdaCase
    RoleAnnotations
  cc-options: -Wall -Wconversion
  ghc-options: -Wall -Wunused-packages -Wmissing-export-lists -Wprepositive-qualified-module -Wno-name-shadowing

library
  import: configuration
  build-depends: base, transformers ^>= 0.6.2.0, mtl ^>= 2.3.1, monad-loops ^>= 0.4.3, sqlite-simple ^>= 0.4.19.0
  hs-source-dirs: source
  exposed-modules: Data.Based.Tools Data.Based.Unfoldable Data.Based.Sqlite
